0.9.5
 - fix: Allow to open measurement files that do not contain the features
   "area_um" or "deform" (#245)
 - enh: Display session name in window title
0.9.4
 - fix: Wrong image/trace data shown for a selected event in the scatter
   plot when working on a log-scale (#244)
 - enh: minor speed-up when working with hierarchy children and exporting
   the 'contour' feature (dclab 0.11.0)
0.9.3
 - enh: Allow to select colormap (#239)
 - fix: dclab 0.10.4 workaround for defective feature in Shape-In
   versions 2.0.6 and 2.0.7 (#241)
 - setup: remove pinning of numpy (works again on Ubuntu 18.04)
0.9.2
 - Allow to set contour levels at quantiles instead of KDE fractions (#180)
 - Allow to manually select contour levels
 - Log-scale contour plots are now available (#231)
 - Pin numpy version to <=1.13.0 to prevent ValueError caused
   by chaco testing whether an array object is contained in another
   object
 - Bugfixes:
   - Log-scale scatter plots did not show log-scale KDE data (#231)
   - Contour lines were shifted by a small amount due to an uncommon
     interpretation of contour plots in chaco (contour lines are now
     computed by dclab using the marching squares algorithm implemented
     in skimage)
   - Bad indexing in exported .rtdc datasets made it impossible
     to browse the video data (dclab 0.10.2)
0.9.1
 - Add tooltips for box filter settings
 - Rename *Statistical analysis* to *Statistical summary* in batch menu
 - Add link to documentation in help menu
 - Major documentation update
 - Bugfixes:
   - Remove temporary session-save directory when autosaving fails due to
     nonexisting analysis
   - Several minor fixes in dclab 0.9.1
0.9.0
 - Introduce new online documentation at http://shapeout.readthedocs.io
 - Consistently use the term Shape-Out
 - Code cleanup and compatibility with dclab 0.8.0
 - Enhancements:
   - Order input fields in measurement browser according
     to measurement number (#229)